src/test/deca/context/invalid/class/48-declFieldExistInSuperClass.deca
/* Description:
     teste la régle (2.4) Déclaration de champ qui existe déja dans la class supérieur, mais qui n'est pas un champ

    Historique:
      cree le 22/01/2020
*/

class A {
  int name;
  int getName(){ // ici on declare une methode
    return name;
  }

}

class B extends A{
  int getName; // le nouveau champ est définie ici
}
